FixFPSでthereadをインクルードするように修正

--- a/project/MyEngine1.vcxproj
+++ b/project/MyEngine1.vcxproj
@@ -375,6 +375,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Primitive3D.h" />
     <ClInclude Include="Engine\RandomEngine.h" />
     <ClInclude Include="Engine\ShaderCompiler.h" />
+    <ClInclude Include="Engine\Skeleton.h" />
     <ClInclude Include="Engine\Sprite.h" />
     <ClInclude Include="Engine\TextureManager.h" />
     <ClInclude Include="Engine\ViewProjection.h" />
