gaussで利用するリソース変更,outlineにworldtransformのscaleが反映されてしまっていたのを修正

--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -104,7 +104,12 @@ Size=1259,40
 Collapsed=0
 
 [Window][animationmodel]
-Pos=60,60
-Size=139,68
+Pos=57,75
+Size=244,122
+Collapsed=0
+
+[Window][FontOffset]
+Pos=26,250
+Size=440,174
 Collapsed=0
 
