--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -69,8 +69,8 @@ Size=187,95
 Collapsed=0
 
 [Window][DebugCamera]
-Pos=47,-7
-Size=249,73
+Pos=35,77
+Size=249,156
 Collapsed=0
 
 [Window][Particle]
