--- a/project/MyEngine1.vcxproj
+++ b/project/MyEngine1.vcxproj
@@ -287,6 +287,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\GlobalVariables.cpp" />
     <ClCompile Include="Engine\Input.cpp" />
     <ClCompile Include="Engine\LoadModel.cpp" />
+    <ClCompile Include="Engine\Material.cpp" />
     <ClCompile Include="Engine\Math\MatrixFunction.cpp" />
     <ClCompile Include="Engine\Math\QuaternionFunction.cpp" />
     <ClCompile Include="Engine\Math\VectorFunction.cpp" />
@@ -367,6 +368,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\GlobalVariables.h" />
     <ClInclude Include="Engine\Input.h" />
     <ClInclude Include="Engine\LoadModel.h" />
+    <ClInclude Include="Engine\Material.h" />
     <ClInclude Include="Engine\Math\Matrix.h" />
     <ClInclude Include="Engine\Math\MatrixFunction.h" />
     <ClInclude Include="Engine\Math\Quaternion.h" />
