--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -69,7 +69,7 @@ Size=187,95
 Collapsed=0
 
 [Window][DebugCamera]
-Pos=86,308
+Pos=33,520
 Size=249,156
 Collapsed=0
 
@@ -79,7 +79,7 @@ Size=177,108
 Collapsed=0
 
 [Window][FPS]
-Pos=558,151
+Pos=38,93
 Size=104,76
 Collapsed=0
 
@@ -104,9 +104,9 @@ Size=1259,40
 Collapsed=0
 
 [Window][animationmodel]
-Pos=186,95
+Pos=227,92
 Size=244,174
-Collapsed=0
+Collapsed=1
 
 [Window][FontOffset]
 Pos=26,250
@@ -114,7 +114,12 @@ Size=308,174
 Collapsed=1
 
 [Window][HSV]
-Pos=49,89
+Pos=37,188
 Size=177,126
+Collapsed=0
+
+[Window][SkyBox]
+Pos=32,357
+Size=248,136
 Collapsed=0
 
