meshsync用オブジェクトのトランスフォームを即時反映するように

--- a/project/imgui.ini
+++ b/project/imgui.ini
@@ -119,7 +119,12 @@ Size=177,126
 Collapsed=0
 
 [Window][SkyBox]
-Pos=32,357
+Pos=29,371
 Size=248,136
+Collapsed=0
+
+[Window][meshShink]
+Pos=241,188
+Size=201,123
 Collapsed=0
 
