エンジン部ディレクトリ再度整理

--- a/project/MyEngine1.vcxproj
+++ b/project/MyEngine1.vcxproj
@@ -325,7 +325,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Application\flooar.cpp" />
     <ClCompile Include="Application\FollowCamera.cpp" />
     <ClCompile Include="Application\GameObject\GameObject.cpp" />
-    <ClCompile Include="Application\Goal.cpp" />
     <ClCompile Include="Application\Ground.cpp" />
     <ClCompile Include="Application\LockOn.cpp" />
     <ClCompile Include="Application\MovingFlooar.cpp" />
@@ -334,7 +333,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Application\PlayerAI.cpp" />
     <ClCompile Include="Application\Skydome.cpp" />
     <ClCompile Include="Application\TimedCall.cpp" />
-    <ClCompile Include="Engine\Animation.cpp" />
+    <ClCompile Include="Engine\3D\Animation.cpp" />
     <ClCompile Include="Engine\Audio\AudioManager.cpp" />
     <ClCompile Include="Engine\Colider\AABB.cpp" />
     <ClCompile Include="Engine\Colider\Collider.cpp" />
@@ -346,35 +345,34 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\CommonFiles\DirectXCommon.cpp" />
     <ClCompile Include="Engine\CommonFiles\SRVManager.cpp" />
     <ClCompile Include="Engine\CommonFiles\WinApp.cpp" />
-    <ClCompile Include="Engine\ConvertString.cpp" />
-    <ClCompile Include="Engine\D3DResourceLeakChacker.cpp" />
+    <ClCompile Include="Engine\CommonFiles\ConvertString.cpp" />
+    <ClCompile Include="Engine\CommonFiles\D3DResourceLeakChacker.cpp" />
     <ClCompile Include="Engine\DebugCamera.cpp" />
-    <ClCompile Include="Engine\DeltaTime.cpp" />
-    <ClCompile Include="Engine\FixFPS.cpp" />
+    <ClCompile Include="Engine\CommonFiles\DeltaTime.cpp" />
+    <ClCompile Include="Engine\CommonFiles\FixFPS.cpp" />
     <ClCompile Include="Engine\GameManager.cpp" />
-    <ClCompile Include="Engine\GetDescriptorHandle.cpp" />
-    <ClCompile Include="Engine\GlobalVariables.cpp" />
-    <ClCompile Include="Engine\Input.cpp" />
-    <ClCompile Include="Engine\LoadModel.cpp" />
-    <ClCompile Include="Engine\Material.cpp" />
+    <ClCompile Include="Engine\CommonFiles\GetDescriptorHandle.cpp" />
+    <ClCompile Include="Engine\GlobalVariables\GlobalVariables.cpp" />
+    <ClCompile Include="Engine\CommonFiles\Input.cpp" />
+    <ClCompile Include="Engine\3D\LoadModel.cpp" />
+    <ClCompile Include="Engine\3D\Material.cpp" />
     <ClCompile Include="Engine\Math\MatrixFunction.cpp" />
     <ClCompile Include="Engine\Math\QuaternionFunction.cpp" />
     <ClCompile Include="Engine\Math\VectorFunction.cpp" />
-    <ClCompile Include="Engine\Model.cpp" />
-    <ClCompile Include="Engine\Particle.cpp" />
-    <ClCompile Include="Engine\PostEffect.cpp" />
-    <ClCompile Include="Engine\Primitive3D.cpp" />
-    <ClCompile Include="Engine\RandomEngine.cpp" />
+    <ClCompile Include="Engine\3D\Model.cpp" />
+    <ClCompile Include="Engine\3D\Particle.cpp" />
+    <ClCompile Include="Engine\2D\PostEffect.cpp" />
+    <ClCompile Include="Engine\CommonFiles\RandomEngine.cpp" />
     <ClCompile Include="Engine\Scene\SceneLoader.cpp" />
-    <ClCompile Include="Engine\ShaderCompiler.cpp" />
-    <ClCompile Include="Engine\Skeleton.cpp" />
-    <ClCompile Include="Engine\SkyBox.cpp" />
-    <ClCompile Include="Engine\Sprite.cpp" />
+    <ClCompile Include="Engine\CommonFiles\ShaderCompiler.cpp" />
+    <ClCompile Include="Engine\3D\Skeleton.cpp" />
+    <ClCompile Include="Engine\3D\SkyBox.cpp" />
+    <ClCompile Include="Engine\2D\Sprite.cpp" />
     <ClCompile Include="Engine\Terrain\Terrain.cpp" />
     <ClCompile Include="Engine\TextureManager.cpp" />
-    <ClCompile Include="Engine\ViewProjection.cpp" />
+    <ClCompile Include="Engine\3D\ViewProjection.cpp" />
     <ClCompile Include="Engine\WIndowProcedure.cpp" />
-    <ClCompile Include="Engine\WorldTransform.cpp" />
+    <ClCompile Include="Engine\3D\WorldTransform.cpp" />
     <ClCompile Include="externals\imgui\imgui.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Disabled</Optimization>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Demo|x64'">Disabled</Optimization>
@@ -414,7 +412,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Application\flooar.h" />
     <ClInclude Include="Application\FollowCamera.h" />
     <ClInclude Include="Application\GameObject\GameObject.h" />
-    <ClInclude Include="Application\Goal.h" />
     <ClInclude Include="Application\Ground.h" />
     <ClInclude Include="Application\LockOn.h" />
     <ClInclude Include="Application\MovingFlooar.h" />
@@ -423,7 +420,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Application\PlayerAI.h" />
     <ClInclude Include="Application\Skydome.h" />
     <ClInclude Include="Application\TimedCall.h" />
-    <ClInclude Include="Engine\Animation.h" />
+    <ClInclude Include="Engine\3D\Animation.h" />
     <ClInclude Include="Engine\Audio\AudioManager.h" />
     <ClInclude Include="Engine\Colider\AABB.h" />
     <ClInclude Include="Engine\Colider\Collider.h" />
@@ -436,17 +433,17 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\CommonFiles\DirectXCommon.h" />
     <ClInclude Include="Engine\CommonFiles\SRVManager.h" />
     <ClInclude Include="Engine\CommonFiles\WinApp.h" />
-    <ClInclude Include="Engine\ConvertString.h" />
-    <ClInclude Include="Engine\D3DResourceLeakChacker.h" />
+    <ClInclude Include="Engine\CommonFiles\ConvertString.h" />
+    <ClInclude Include="Engine\CommonFiles\D3DResourceLeakChacker.h" />
     <ClInclude Include="Engine\DebugCamera.h" />
-    <ClInclude Include="Engine\DeltaTime.h" />
-    <ClInclude Include="Engine\FixFPS.h" />
+    <ClInclude Include="Engine\CommonFiles\DeltaTime.h" />
+    <ClInclude Include="Engine\CommonFiles\FixFPS.h" />
     <ClInclude Include="Engine\GameManager.h" />
-    <ClInclude Include="Engine\GetDescriptorHandle.h" />
-    <ClInclude Include="Engine\GlobalVariables.h" />
-    <ClInclude Include="Engine\Input.h" />
-    <ClInclude Include="Engine\LoadModel.h" />
-    <ClInclude Include="Engine\Material.h" />
+    <ClInclude Include="Engine\CommonFiles\GetDescriptorHandle.h" />
+    <ClInclude Include="Engine\GlobalVariables\GlobalVariables.h" />
+    <ClInclude Include="Engine\CommonFiles\Input.h" />
+    <ClInclude Include="Engine\3D\LoadModel.h" />
+    <ClInclude Include="Engine\3D\Material.h" />
     <ClInclude Include="Engine\Math\Matrix.h" />
     <ClInclude Include="Engine\Math\MatrixFunction.h" />
     <ClInclude Include="Engine\Math\Quaternion.h" />
@@ -455,24 +452,23 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\Math\Vector3.h" />
     <ClInclude Include="Engine\Math\Vector4.h" />
     <ClInclude Include="Engine\Math\VectorFunction.h" />
-    <ClInclude Include="Engine\Model.h" />
+    <ClInclude Include="Engine\3D\Model.h" />
     <ClInclude Include="Engine\ModelStruct.h" />
-    <ClInclude Include="Engine\Particle.h" />
-    <ClInclude Include="Engine\PostEffect.h" />
-    <ClInclude Include="Engine\Primitive3D.h" />
-    <ClInclude Include="Engine\RandomEngine.h" />
+    <ClInclude Include="Engine\3D\Particle.h" />
+    <ClInclude Include="Engine\2D\PostEffect.h" />
+    <ClInclude Include="Engine\CommonFiles\RandomEngine.h" />
     <ClInclude Include="Engine\Scene\IScene.h" />
     <ClInclude Include="Engine\Scene\SceneLoader.h" />
     <ClInclude Include="Engine\Scene\SceneStructs.h" />
-    <ClInclude Include="Engine\ShaderCompiler.h" />
-    <ClInclude Include="Engine\Skeleton.h" />
-    <ClInclude Include="Engine\SkyBox.h" />
-    <ClInclude Include="Engine\Sprite.h" />
+    <ClInclude Include="Engine\CommonFiles\ShaderCompiler.h" />
+    <ClInclude Include="Engine\3D\Skeleton.h" />
+    <ClInclude Include="Engine\3D\SkyBox.h" />
+    <ClInclude Include="Engine\2D\Sprite.h" />
     <ClInclude Include="Engine\Terrain\Terrain.h" />
     <ClInclude Include="Engine\TextureManager.h" />
-    <ClInclude Include="Engine\ViewProjection.h" />
+    <ClInclude Include="Engine\3D\ViewProjection.h" />
     <ClInclude Include="Engine\WindowProcedure.h" />
-    <ClInclude Include="Engine\WorldTransform.h" />
+    <ClInclude Include="Engine\3D\WorldTransform.h" />
     <ClInclude Include="externals\imgui\imconfig.h" />
     <ClInclude Include="externals\imgui\imgui.h" />
     <ClInclude Include="externals\imgui\imgui_impl_dx12.h" />
